"""Test Smartcar diagnostics."""

from unittest.mock import AsyncMock

from homeassistant.core import HomeAssistant
from homeassistant.setup import async_setup_component
import pytest
from pytest_homeassistant_custom_component.common import MockConfigEntry
from pytest_homeassistant_custom_component.components.diagnostics import (
    get_diagnostics_for_config_entry,
)
from pytest_homeassistant_custom_component.typing import ClientSessionGenerator
from syrupy.assertion import SnapshotAssertion
from syrupy.filters import props

from . import setup_integration


@pytest.mark.usefixtures("enable_all_entities")
# @pytest.mark.parametrize("vehicle_fixture", ["vw_id_4"])
async def test_entry_diagnostics(
    hass: HomeAssistant,
    mock_config_entry: MockConfigEntry,
    hass_client: ClientSessionGenerator,
    snapshot: SnapshotAssertion,
    vehicle: AsyncMock,
) -> None:
    """Test config entry diagnostics."""
    await async_setup_component(hass, "homeassistant", {})
    await setup_integration(hass, mock_config_entry)
    assert await get_diagnostics_for_config_entry(
        hass, hass_client, mock_config_entry
    ) == snapshot(exclude=props("entry_id", "created_at", "modified_at", "expires_at"))
